# my-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  FORMAT.md  IDENTITY.md  README.md  SOUL.md  TODO.md  brief.md  compose.prod.yml  compose.yml  config.toml
docs/: MULTI_TENANT_PLAN.md
skills/: create_skill.md  dice.md  weekly_review.md
src/: config.rs  error.rs  main.rs  observability.rs  skills.rs
src/agent/: core.rs  mod.rs
src/channels/: format.rs  mod.rs  telegram.rs
src/llm/: embeddings.rs  mod.rs  openrouter.rs  stt.rs
src/memory/: store.rs
src/scheduler/: mod.rs  store.rs
src/ticktick/: client.rs  mod.rs  oauth.rs
src/tools/: buttons.rs  dice.rs  memory.rs  mod.rs  model.rs  schedule.rs  skills.rs  ticktick.rs  topics.rs  url_reader.rs  web_search.rs
