[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Telegram (Bot API 9.5)
frankenstein = { version = "0.48", features = ["client-reqwest"] }

# LLM (OpenRouter-compatible)
async-openai = { version = "0.33", default-features = false, features = ["chat-completion", "rustls"] }

# Database (async SQLite)
tokio-rusqlite = { version = "0.7", features = ["bundled"] }

# Config
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "2"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
