[package]
name = "agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Telegram (Bot API 9.5)
frankenstein = { version = "0.48", features = ["client-reqwest"] }

# LLM (OpenRouter-compatible)
async-openai = { version = "0.33", default-features = false, features = ["chat-completion", "rustls"] }

# Database (async SQLite)
tokio-rusqlite = { version = "0.7", features = ["bundled"] }

# Config
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Logging + Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["http-json"] }

# Web search (DuckDuckGo HTML parsing)
scraper = "0.25"

# Scheduler
cron = "0.15"
chrono-tz = "0.10"

# Errors
anyhow = "1"
thiserror = "2"

# Base64 (vision)
base64 = "0.22"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 2
